# Challengers

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/bot/: main.py
src/challengers/: main.py
src/challengers/client/: __init__.py  client.py  network.py
src/challengers/client/gui/: __init__.py  battle_screen.py  button.py  deck_management_screen.py  menu_screen.py
src/challengers/client/gui/components/: __init__.py  button.py  gui_element.py  interface.py  text.py  text_field.py
src/challengers/client/gui/game/: __init__.py  card_back.py  card_front.py  card_space.py  constants.py  cross.py  deck.py  park_board.py  trophy_token.py
src/challengers/client/gui/util/: __init__.py  constants.py  text_rect.py
src/challengers/game/: __init__.py  card.py  duel.py  park.py  player.py  tournament.py  tray.py  trophy.py
src/challengers/game/data/: __init__.py  cards.json  config.py  trophies.json
src/challengers/server/: __init__.py  client.py  packets.py  server.py
src/challengers/tests/: test_duel.py  test_tournament.py
src/challengers/utils/: __init__.py  manage_cards.py  manage_trophies.py
src/client_server_tests/: client.py  network.py  player.py  server.py
src/scissors-paper-rock/: client.py  game.py  network.py  server.py
